[Fix]フラッシュメッセージの非本後化

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,10 @@ ja:
      topic:
       title: お題
       image: 画像
+    devise:
+     sessions:
+      user:
+       signed_in: ログインしました
     errors:
       messages:
         record_invalid: 'バリデーションに失敗しました: %{errors}'
